fixed text alignment on index

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -56,9 +56,14 @@
 
   .card {
     display: flex;
-    text-align: center;
+    // text-align: center;
     width: 100%;
     margin-right: 0 !important;
+    margin-left: 6em;
+
+    .row {
+      text-align: start;
+    }
 
     p {
       display: flex;
